# sparkathon

./: .gitignore  README.md  package-lock.json  package.json
Agent/: .env.example  .gitignore  CODE_REVIEW.md  IMPROVEMENT_GAMEPLAN.md  README.md  Walmart_data_cleaned.csv  agent_api.py  config.py  ingest.py  ingest_products.py  pyproject.toml  query_products.py  report.md  requirements.txt  shopping_assistant.py  shopping_tools.py  sync_products.py  verify_databases.py  walmart_products.db
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  render.yaml  requirements.txt  run_ingest.py
backend/app/: database.py  ingest.py  main.py  schemas.py
backend/data/: products.csv
backend/prisma/: schema.prisma
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: README.md  client.js  config.js  index.js
frontend/src/api/hooks/: useApi.js
frontend/src/api/services/: analyticsService.js  api.js  chatService.js  orderService.js  productService.js  talkService.js  userService.js
frontend/src/components/: Avatar.jsx  Button.jsx  Card.jsx  CheckoutAnimation.jsx  MessageInput.jsx  Product.jsx  ScrollArea.jsx
frontend/src/pages/: Chat.jsx  Dashboard.jsx  Map.jsx  Map3D.jsx
