[project]
name = "agent"
version = "0.1.0"
description = "Product data ingestion with vector embeddings and SQL storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]
